--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@ ul.tab li a:focus, .active {
           <img src="images/Education.png" style="width:100%">
         </div>
         <div class="w3-container w3-card-2">
-          <img src="images/grade.png" style="width:100%">
+          <img src="images/Grade.png" style="width:100%">
         </div>
         <div class="w3-container w3-card-2">
-          <img src="images/grade1.png" style="width:100%">
+          <img src="images/Grade1.png" style="width:100%">
         </div>
       </div>
 
