--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ src="HBD_instrumental.mp3">
 
       <div class="mikiWrapper">
         <div class="miki">
-          <img src="img/miki1.png" class="imgMiki"></img>
+          <img src="img/miki1.jpg" class="imgMiki"></img>
         </div>
         <div class="miki">
           <img src="img/miki2.png" class="imgMiki"></img>
@@ -610,7 +610,7 @@ src="HBD_instrumental.mp3">
           <img src="img/miki3.png" class="imgMiki"></img>
         </div>
         <div class="miki">
-          <img src="img/miki4.png" class="imgMiki"></img>
+          <img src="img/miki4.jpg" class="imgMiki"></img>
         </div>
       </div>
     </div>    
