--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ body {font-family: "Lato", sans-serif; background-color: pink;}
     <div class="myContent">
       <img class="valentine" src="Happy-Valentines-Day-Gifs-4.gif" />
     </div>
-    <video width="320" height="240" controls>
+    <video id="vid" width="320" height="240" autoplay controls>
       <source src="videoplayback.mp4" type="video/mp4">
-    Your browser does not support the video tag.
     </video>
 <script>
+  //document.getElementById('vid').play();
 </script>
 </body>
 </html>
