--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@ body {font-family: "Lato", sans-serif; background-color: pink;}
   </div>
 </div> 
 -->
-
 <body class="myBody">
-
 <!-- Page Container -->
     <div class="myContent">
       <img class="valentine" src="Happy-Valentines-Day-Gifs-4.gif" />
     </div>
+    <video width="320" height="240" controls>
+      <source src="videoplayback.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
 <script>
 </script>
 </body>
